@@ -1,3 +1,7 @@
+2004-12-08  Dan Espen  <dane@mk.telcordia.com>
+
+	* fvwm/fvwm.1.in: lang check.
+
 2004-12-06  Olivier Chapuis  <olivier.chapuis@free.fr>
 
 	* fvwm/fvwm.1.in: 
